--- a/translation/transfers.json
+++ b/translation/transfers.json
@@ -110,7 +110,7 @@
       "ITEM@"
     ],
     "to": [
-      "@םיטירפ"
+      "םיטירפ@"
     ]
   },
   {
@@ -120,7 +120,7 @@
       "SAVE@"
     ],
     "to": [
-      "@הרימש"
+      "הרימש@"
     ]
   },
   {
@@ -130,7 +130,7 @@
       "RESET@"
     ],
     "to": [
-      "@לוחתיא"
+      "לוחתיא@"
     ]
   },
   {
@@ -140,7 +140,7 @@
       "EXIT@"
     ],
     "to": [
-      "@האיצי"
+      "האיצי@"
     ]
   },
   {
@@ -150,7 +150,7 @@
       "OPTION@"
     ],
     "to": [
-      "@םילכ"
+      "םילכ@"
     ]
   },
   {
@@ -174,7 +174,7 @@
     ],
     "to": [
       "שדח קחשמ",
-      "@תורדגה"
+      "תורדגה@"
     ]
   }
 ]
