poke names sed will break

--- a/translation/transfers.json
+++ b/translation/transfers.json
@@ -1,5 +1,317 @@
 [
   {
+    "file": "../pokered/data/pokemon/names.asm",
+    "label": "MonsterNames",
+    "src": [
+      "RHYDON@@@@",
+      "KANGASKHAN",
+      "NIDORAN♂@@",
+      "CLEFAIRY@@",
+      "SPEAROW@@@",
+      "VOLTORB@@@",
+      "NIDOKING@@",
+      "SLOWBRO@@@",
+      "IVYSAUR@@@",
+      "EXEGGUTOR@",
+      "LICKITUNG@",
+      "EXEGGCUTE@",
+      "GRIMER@@@@",
+      "GENGAR@@@@",
+      "NIDORAN♀@@",
+      "NIDOQUEEN@",
+      "CUBONE@@@@",
+      "RHYHORN@@@",
+      "LAPRAS@@@@",
+      "ARCANINE@@",
+      "MEW@@@@@@@",
+      "GYARADOS@@",
+      "SHELLDER@@",
+      "TENTACOOL@",
+      "GASTLY@@@@",
+      "SCYTHER@@@",
+      "STARYU@@@@",
+      "BLASTOISE@",
+      "PINSIR@@@@",
+      "TANGELA@@@",
+      "GROWLITHE@",
+      "ONIX@@@@@@",
+      "FEAROW@@@@",
+      "PIDGEY@@@@",
+      "SLOWPOKE@@",
+      "KADABRA@@@",
+      "GRAVELER@@",
+      "CHANSEY@@@",
+      "MACHOKE@@@",
+      "MRMIME@@@@",
+      "HITMONLEE@",
+      "HITMONCHAN",
+      "ARBOK@@@@@",
+      "PARASECT@@",
+      "PSYDUCK@@@",
+      "DROWZEE@@@",
+      "GOLEM@@@@@",
+      "MAGMAR@@@@",
+      "ELECTABUZZ",
+      "MAGNETON@@",
+      "KOFFING@@@",
+      "MANKEY@@@@",
+      "SEEL@@@@@@",
+      "DIGLETT@@@",
+      "TAUROS@@@@",
+      "FARFETCH'D",
+      "VENONAT@@@",
+      "DRAGONITE@",
+      "DODUO@@@@@",
+      "POLIWAG@@@",
+      "JYNX@@@@@@",
+      "MOLTRES@@@",
+      "ARTICUNO@@",
+      "ZAPDOS@@@@",
+      "DITTO@@@@@",
+      "MEOWTH@@@@",
+      "KRABBY@@@@",
+      "VULPIX@@@@",
+      "NINETALES@",
+      "PIKACHU@@@",
+      "RAICHU@@@@",
+      "DRATINI@@@",
+      "DRAGONAIR@",
+      "KABUTO@@@@",
+      "KABUTOPS@@",
+      "HORSEA@@@@",
+      "SEADRA@@@@",
+      "SANDSHREW@",
+      "SANDSLASH@",
+      "OMANYTE@@@",
+      "OMASTAR@@@",
+      "JIGGLYPUFF",
+      "WIGGLYTUFF",
+      "EEVEE@@@@@",
+      "FLAREON@@@",
+      "JOLTEON@@@",
+      "VAPOREON@@",
+      "MACHOP@@@@",
+      "ZUBAT@@@@@",
+      "EKANS@@@@@",
+      "PARAS@@@@@",
+      "POLIWHIRL@",
+      "POLIWRATH@",
+      "WEEDLE@@@@",
+      "KAKUNA@@@@",
+      "BEEDRILL@@",
+      "DODRIO@@@@",
+      "PRIMEAPE@@",
+      "DUGTRIO@@@",
+      "VENOMOTH@@",
+      "DEWGONG@@@",
+      "CATERPIE@@",
+      "METAPOD@@@",
+      "BUTTERFREE",
+      "MACHAMP@@@",
+      "GOLDUCK@@@",
+      "HYPNO@@@@@",
+      "GOLBAT@@@@",
+      "MEWTWO@@@@",
+      "SNORLAX@@@",
+      "MAGIKARP@@",
+      "MUK@@@@@@@",
+      "KINGLER@@@",
+      "CLOYSTER@@",
+      "ELECTRODE@",
+      "CLEFABLE@@",
+      "WEEZING@@@",
+      "PERSIAN@@@",
+      "MAROWAK@@@",
+      "HAUNTER@@@",
+      "ABRA@@@@@@",
+      "ALAKAZAM@@",
+      "PIDGEOTTO@",
+      "PIDGEOT@@@",
+      "STARMIE@@@",
+      "BULBASAUR@",
+      "VENUSAUR@@",
+      "TENTACRUEL",
+      "GOLDEEN@@@",
+      "SEAKING@@@",
+      "PONYTA@@@@",
+      "RAPIDASH@@",
+      "RATTATA@@@",
+      "RATICATE@@",
+      "NIDORINO@@",
+      "NIDORINA@@",
+      "GEODUDE@@@",
+      "PORYGON@@@",
+      "AERODACTYL",
+      "MAGNEMITE@",
+      "CHARMANDER",
+      "SQUIRTLE@@",
+      "CHARMELEON",
+      "WARTORTLE@",
+      "CHARIZARD@",
+      "ODDISH@@@@",
+      "GLOOM@@@@@",
+      "VILEPLUME@",
+      "BELLSPROUT",
+      "WEEPINBELL",
+      "VICTREEBEL",
+      "MISSINGNO@"
+    ],
+    "to": [
+      "אישנרק@@@@",
+      "לבסיכ@@@@@",
+      "♂ןטחמ@@@@@",
+      "ןודשמח@@@@",
+      "רורדיכ@@@@",
+      "למלמשח@@@@",
+      "ץקלמ@@@@@@",
+      "טאלחא@@@@@",
+      "הנושד@@@@@",
+      "חצרמת@@@@@",
+      "ןושלוגע@@@",
+      "תודומציב@@",
+      "יאפנט@@@@@",
+      "יאדלשא@@@@",
+      "♀תינטחמ@@@",
+      "תצכלמ@@@@@",
+      "שרשר@@@@@@",
+      "ףזונרק@@@@",
+      "תיגוכת@@@@",
+      "קזבלכ@@@@@",
+      "שת@@@@@@@@",
+      "ףרוטיול@@@",
+      "ךכנוק@@@@@",
+      "שושרק@@@@@",
+      "דאש@@@@@@@",
+      "המלש-לגמ@@",
+      "שיכוכ@@@@@",
+      "בציצפמ@@@@",
+      "ןתבצ@@@@@@",
+      "היכבס@@@@@",
+      "שימהנ@@@@@",
+      "םהושחנ@@@@",
+      "רורדחפ@@@@",
+      "ידנוי@@@@@",
+      "טאלסיכ@@@@",
+      "ארבדכ@@@@@",
+      "ץצחמ@@@@@@",
+      "לזמ-תב@@@@",
+      "קנרבג@@@@@",
+      "ןייקחרמ@@@",
+      "ה'גדמפמכה@",
+      "דראפמכה@@@",
+      "ףתנ@@@@@@@",
+      "קרפט@@@@@@",
+      "זוורושקת@@",
+      "םונשי@@@@@",
+      "םליוג@@@@@",
+      "זוורבל@@@@",
+      "םוזמשח@@@@",
+      "תבטוק@@@@@",
+      "ןשעתשמ@@@@",
+      "ינבפוק@@@@",
+      "םיבנ@@@@@@",
+      "דיפח@@@@@@",
+      "סוסרפ@@@@@",
+      "ריבסול@@@@",
+      "שותלער@@@@",
+      "ריבאטל@@@@",
+      "וילשינש@@@",
+      "ענשאר@@@@@",
+      "השיב@@@@@@",
+      "התאלתומ@@@",
+      "דחאוואפיק@",
+      "ןנ'תמשח@@@",
+      "ץוניש@@@@@",
+      "יצימ@@@@@@",
+      "ינטרש@@@@@",
+      "לעושש@@@@@",
+      "םילעשת@@@@",
+      "ץוציוצ@@@@",
+      "םערבכע@@@@",
+      "הנטל@@@@@@",
+      "ריוואטל@@@",
+      "הדסרפ@@@@@",
+      "הדוצרפ@@@@",
+      "סוסמי@@@@@",
+      "םי-ץא@@@@@",
+      "ףדלוח@@@@@",
+      "לוחתוח@@@@",
+      "ינוליס@@@@",
+      "בכוליס@@@@",
+      "חופנעינ@@@",
+      "חושקשיכ@@@",
+      "ותאפ@@@@@@",
+      "ןדירונ@@@@",
+      "ןדיעז@@@@@",
+      "ןדידא@@@@@",
+      "הכרבג@@@@@",
+      "ףלצא@@@@@@",
+      "ןחש@@@@@@@",
+      "לפט@@@@@@@",
+      "בובשאר@@@@",
+      "םעזשאר@@@@",
+      "טחלות@@@@@",
+      "םלוגלג@@@@",
+      "רובדקמ@@@@",
+      "וילשולש@@@",
+      "םעוזפוק@@@",
+      "הילפח@@@@@",
+      "שעלער@@@@@",
+      "שחלט@@@@@@",
+      "יחז@@@@@@@",
+      "תעקפמ@@@@@",
+      "ץרפרפ@@@@@",
+      "ףולרבג@@@@",
+      "בהזוורב@@@",
+      "ןישומ@@@@@",
+      "ףלעלב@@@@@",
+      "ינשת@@@@@@",
+      "םנמנמש@@@@",
+      "ןונמסק@@@@",
+      "שפרמ@@@@@@",
+      "ןטרנכ@@@@@",
+      "ףדצובמ@@@@",
+      "למשקומ@@@@",
+      "לשמח@@@@@@",
+      "םיינשעתשמ@",
+      "יציק@@@@@@",
+      "שקרק@@@@@@",
+      "דצור@@@@@@",
+      "ארבא@@@@@@",
+      "רלגוא@@@@@",
+      "הרשע-הנוי@",
+      "הנוליס@@@@",
+      "טישכוכ@@@@",
+      "ערזומ@@@@@",
+      "גירחרפ@@@@",
+      "שושורמ@@@@",
+      "הכלהז@@@@@",
+      "ךלמי@@@@@@",
+      "םוחיס@@@@@",
+      "ףרוסוס@@@@",
+      "ססרבכע@@@@",
+      "שורבדה@@@@",
+      "ןדוח@@@@@@",
+      "תינדוח@@@@",
+      "עקרוחב@@@@",
+      "ןעלוצמ@@@@",
+      "ףענוריווא@",
+      "ןבאוש@@@@@",
+      "טמוחג@@@@@",
+      "בצירפש@@@@",
+      "תיקיזיזח@@",
+      "בצברק@@@@@",
+      "שאטל@@@@@@",
+      "רזונצ@@@@@",
+      "ןואכירפ@@@",
+      "לבנשע@@@@@",
+      "ןצינומעפ@@",
+      "ןומעמד@@@@",
+      "ןומעליהת@@",
+      ".רפסמתספספ"
+    ],
+  },
+  {
     "file": "../pokered/data/battle/stat_mod_names.asm",
     "label": "StatModTextStrings",
     "src": [
