--- a/translation/transfers.json
+++ b/translation/transfers.json
@@ -33,6 +33,8 @@
       "BLASTOISE@",
       "PINSIR@@@@",
       "TANGELA@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "GROWLITHE@",
       "ONIX@@@@@@",
       "FEAROW@@@@",
@@ -42,7 +44,7 @@
       "GRAVELER@@",
       "CHANSEY@@@",
       "MACHOKE@@@",
-      "MRMIME@@@@",
+      "MR.MIME@@@",
       "HITMONLEE@",
       "HITMONCHAN",
       "ARBOK@@@@@",
@@ -50,17 +52,26 @@
       "PSYDUCK@@@",
       "DROWZEE@@@",
       "GOLEM@@@@@",
+      "MISSINGNO.",
       "MAGMAR@@@@",
+      "MISSINGNO.",
       "ELECTABUZZ",
       "MAGNETON@@",
       "KOFFING@@@",
+      "MISSINGNO.",
       "MANKEY@@@@",
       "SEEL@@@@@@",
       "DIGLETT@@@",
       "TAUROS@@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "FARFETCH'D",
       "VENONAT@@@",
       "DRAGONITE@",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "DODUO@@@@@",
       "POLIWAG@@@",
       "JYNX@@@@@@",
@@ -70,16 +81,23 @@
       "DITTO@@@@@",
       "MEOWTH@@@@",
       "KRABBY@@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "VULPIX@@@@",
       "NINETALES@",
       "PIKACHU@@@",
       "RAICHU@@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "DRATINI@@@",
       "DRAGONAIR@",
       "KABUTO@@@@",
       "KABUTOPS@@",
       "HORSEA@@@@",
       "SEADRA@@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "SANDSHREW@",
       "SANDSLASH@",
       "OMANYTE@@@",
@@ -99,29 +117,38 @@
       "WEEDLE@@@@",
       "KAKUNA@@@@",
       "BEEDRILL@@",
+      "MISSINGNO.",
       "DODRIO@@@@",
       "PRIMEAPE@@",
       "DUGTRIO@@@",
       "VENOMOTH@@",
       "DEWGONG@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "CATERPIE@@",
       "METAPOD@@@",
       "BUTTERFREE",
       "MACHAMP@@@",
+      "MISSINGNO.",
       "GOLDUCK@@@",
       "HYPNO@@@@@",
       "GOLBAT@@@@",
       "MEWTWO@@@@",
       "SNORLAX@@@",
       "MAGIKARP@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "MUK@@@@@@@",
+      "MISSINGNO.",
       "KINGLER@@@",
       "CLOYSTER@@",
+      "MISSINGNO.",
       "ELECTRODE@",
       "CLEFABLE@@",
       "WEEZING@@@",
       "PERSIAN@@@",
       "MAROWAK@@@",
+      "MISSINGNO.",
       "HAUNTER@@@",
       "ABRA@@@@@@",
       "ALAKAZAM@@",
@@ -131,8 +158,13 @@
       "BULBASAUR@",
       "VENUSAUR@@",
       "TENTACRUEL",
+      "MISSINGNO.",
       "GOLDEEN@@@",
       "SEAKING@@@",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "PONYTA@@@@",
       "RAPIDASH@@",
       "RATTATA@@@",
@@ -142,20 +174,26 @@
       "GEODUDE@@@",
       "PORYGON@@@",
       "AERODACTYL",
+      "MISSINGNO.",
       "MAGNEMITE@",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "CHARMANDER",
       "SQUIRTLE@@",
       "CHARMELEON",
       "WARTORTLE@",
       "CHARIZARD@",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
+      "MISSINGNO.",
       "ODDISH@@@@",
       "GLOOM@@@@@",
       "VILEPLUME@",
       "BELLSPROUT",
       "WEEPINBELL",
-      "VICTREEBEL",
-      "MISSINGNO@"
-    ],
+      "VICTREEBEL"
+    ],    
     "to": [
       "אישנרק@@@@",
       "לבסיכ@@@@@",
@@ -187,6 +225,8 @@
       "בציצפמ@@@@",
       "ןתבצ@@@@@@",
       "היכבס@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "שימהנ@@@@@",
       "םהושחנ@@@@",
       "רורדחפ@@@@",
@@ -204,17 +244,26 @@
       "זוורושקת@@",
       "םונשי@@@@@",
       "םליוג@@@@@",
+      ".רפסמתספספ",
       "זוורבל@@@@",
+      ".רפסמתספספ",
       "םוזמשח@@@@",
       "תבטוק@@@@@",
       "ןשעתשמ@@@@",
+      ".רפסמתספספ",
       "ינבפוק@@@@",
       "םיבנ@@@@@@",
       "דיפח@@@@@@",
       "סוסרפ@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "ריבסול@@@@",
       "שותלער@@@@",
       "ריבאטל@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "וילשינש@@@",
       "ענשאר@@@@@",
       "השיב@@@@@@",
@@ -224,16 +273,23 @@
       "ץוניש@@@@@",
       "יצימ@@@@@@",
       "ינטרש@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "לעושש@@@@@",
       "םילעשת@@@@",
       "ץוציוצ@@@@",
       "םערבכע@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "הנטל@@@@@@",
       "ריוואטל@@@",
       "הדסרפ@@@@@",
       "הדוצרפ@@@@",
       "סוסמי@@@@@",
       "םי-ץא@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "ףדלוח@@@@@",
       "לוחתוח@@@@",
       "ינוליס@@@@",
@@ -253,29 +309,38 @@
       "טחלות@@@@@",
       "םלוגלג@@@@",
       "רובדקמ@@@@",
+      ".רפסמתספספ",
       "וילשולש@@@",
       "םעוזפוק@@@",
       "הילפח@@@@@",
       "שעלער@@@@@",
       "שחלט@@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "יחז@@@@@@@",
       "תעקפמ@@@@@",
       "ץרפרפ@@@@@",
       "ףולרבג@@@@",
+      ".רפסמתספספ",
       "בהזוורב@@@",
       "ןישומ@@@@@",
       "ףלעלב@@@@@",
       "ינשת@@@@@@",
       "םנמנמש@@@@",
       "ןונמסק@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "שפרמ@@@@@@",
+      ".רפסמתספספ",
       "ןטרנכ@@@@@",
       "ףדצובמ@@@@",
+      ".רפסמתספספ",
       "למשקומ@@@@",
       "לשמח@@@@@@",
       "םיינשעתשמ@",
       "יציק@@@@@@",
       "שקרק@@@@@@",
+      ".רפסמתספספ",
       "דצור@@@@@@",
       "ארבא@@@@@@",
       "רלגוא@@@@@",
@@ -285,8 +350,13 @@
       "ערזומ@@@@@",
       "גירחרפ@@@@",
       "שושורמ@@@@",
+      ".רפסמתספספ",
       "הכלהז@@@@@",
       "ךלמי@@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "םוחיס@@@@@",
       "ףרוסוס@@@@",
       "ססרבכע@@@@",
@@ -296,21 +366,27 @@
       "עקרוחב@@@@",
       "ןעלוצמ@@@@",
       "ףענוריווא@",
+      ".רפסמתספספ",
       "ןבאוש@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "טמוחג@@@@@",
       "בצירפש@@@@",
       "תיקיזיזח@@",
       "בצברק@@@@@",
       "שאטל@@@@@@",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
+      ".רפסמתספספ",
       "רזונצ@@@@@",
       "ןואכירפ@@@",
       "לבנשע@@@@@",
       "ןצינומעפ@@",
       "ןומעמד@@@@",
-      "ןומעליהת@@",
-      ".רפסמתספספ"
+      "ןומעליהת@@"
     ]
-  },
+  },  
   {
     "file": "../pokered/data/battle/stat_mod_names.asm",
     "label": "StatModTextStrings",
@@ -402,7 +478,7 @@
       "POKéDEX@"
     ],
     "to": [
-      "עד#"
+      "עד#@"
     ]
   },
   {
