--- a/translation/transfers.json
+++ b/translation/transfers.json
@@ -612,5 +612,421 @@
       "המודא הסריג תווצ@",
       "הלוחכ הסריג תווצ@"
     ]
+  },
+  {
+    "file": "../pokered/data/text/text_2.asm",
+    "label": "_OakSpeechText1",
+    "src": [
+      "Hello there!",
+      "Welcome to the",
+      "world of #MON!",
+      "My name is OAK!",
+      "People call me",
+      "the #MON PROF!"
+    ],
+    "to": [
+      "!םולש",
+      "אבה ךורב",
+      "ןומ# לש םלועל",
+      "ןולא אוה ימש",
+      "יל םיארוק םישנא",
+      "!ןומ# רוספורפ"
+    ]
+  },
+  {
+    "file": "../pokered/data/battle/stat_names.asm",
+    "label": "VitaminStats",
+    "src": [
+      "HEALTH",
+      "ATTACK",
+      "DEFENSE",
+      "SPEED",
+      "SPECIAL"
+    ],
+    "to": [
+      "תואירב",
+      "הפקתה",
+      "הנגה",
+      "תוריהמ",
+      "תדחוימ תלוכי"
+    ]
+  },
+  {
+    "file": "../pokered/data/battle/stat_mod_names.asm",
+    "label": "StatModTextStrings",
+    "src": [
+      "ATTACK",
+      "DEFENSE",
+      "SPEED",
+      "SPECIAL",
+      "ACCURACY",
+      "EVADE"
+    ],
+    "to": [
+      "הפקתה",
+      "הנגה",
+      "תוריהמ",
+      "תדחוימ תלוכי",
+      "קויד",
+      "תוקמחתה"
+    ]
+  },
+  {
+    "file": "../pokered/data/credits/credits_text.asm",
+    "label": "CredTajiri",
+    "src": [
+      "SATOSHI TAJIRI@"
+    ],
+    "to": [
+      "ירי'גאט ישוטס"
+    ]
+  },
+  {
+    "file": "../pokered/data/events/prizes.asm",
+    "label": "NoThanksText",
+    "src": [
+      "NO THANKS@"
+    ],
+    "to": [
+      "הדות אל@"
+    ]
+  },
+  {
+    "file": "../pokered/data/moves/names.asm",
+    "label": "MoveNames",
+    "src": [
+      "POUND",
+      "KARATE CHOP",
+      "DOUBLESLAP",
+      "COMET PUNCH",
+      "MEGA PUNCH",
+      "PAY DAY",
+      "FIRE PUNCH",
+      "ICE PUNCH",
+      "THUNDERPUNCH",
+      "SCRATCH",
+      "VICEGRIP",
+      "GUILLOTINE",
+      "RAZOR WIND",
+      "SWORDS DANCE",
+      "CUT",
+      "GUST",
+      "WING ATTACK",
+      "WHIRLWIND",
+      "FLY",
+      "BIND",
+      "SLAM",
+      "VINE WHIP",
+      "STOMP",
+      "DOUBLE KICK",
+      "MEGA KICK",
+      "JUMP KICK",
+      "ROLLING KICK",
+      "SAND-ATTACK",
+      "HEADBUTT",
+      "HORN ATTACK",
+      "FURY ATTACK",
+      "HORN DRILL",
+      "TACKLE",
+      "BODY SLAM",
+      "WRAP",
+      "TAKE DOWN",
+      "THRASH",
+      "DOUBLE-EDGE",
+      "TAIL WHIP",
+      "POISON STING",
+      "TWINEEDLE",
+      "PIN MISSILE",
+      "LEER",
+      "BITE",
+      "GROWL",
+      "ROAR",
+      "SING",
+      "SUPERSONIC",
+      "SONICBOOM",
+      "DISABLE",
+      "ACID",
+      "EMBER",
+      "FLAMETHROWER",
+      "MIST",
+      "WATER GUN",
+      "HYDRO PUMP",
+      "SURF",
+      "ICE BEAM",
+      "BLIZZARD",
+      "PSYBEAM",
+      "BUBBLEBEAM",
+      "AURORA BEAM",
+      "HYPER BEAM",
+      "PECK",
+      "DRILL PECK",
+      "SUBMISSION",
+      "LOW KICK",
+      "COUNTER",
+      "SEISMIC TOSS",
+      "STRENGTH",
+      "ABSORB",
+      "MEGA DRAIN",
+      "LEECH SEED",
+      "GROWTH",
+      "RAZOR LEAF",
+      "SOLARBEAM",
+      "POISONPOWDER",
+      "STUN SPORE",
+      "SLEEP POWDER",
+      "PETAL DANCE",
+      "STRING SHOT",
+      "DRAGON RAGE",
+      "FIRE SPIN",
+      "THUNDERSHOCK",
+      "THUNDERBOLT",
+      "THUNDER WAVE",
+      "THUNDER",
+      "ROCK THROW",
+      "EARTHQUAKE",
+      "FISSURE",
+      "DIG",
+      "TOXIC",
+      "CONFUSION",
+      "PSYCHIC",
+      "HYPNOSIS",
+      "MEDITATE",
+      "AGILITY",
+      "QUICK ATTACK",
+      "RAGE",
+      "TELEPORT",
+      "NIGHT SHADE",
+      "MIMIC",
+      "SCREECH",
+      "DOUBLE TEAM",
+      "RECOVER",
+      "HARDEN",
+      "MINIMIZE",
+      "SMOKESCREEN",
+      "CONFUSE RAY",
+      "WITHDRAW",
+      "DEFENSE CURL",
+      "BARRIER",
+      "LIGHT SCREEN",
+      "HAZE",
+      "REFLECT",
+      "FOCUS ENERGY",
+      "BIDE",
+      "METRONOME",
+      "MIRROR MOVE",
+      "SELFDESTRUCT",
+      "EGG BOMB",
+      "LICK",
+      "SMOG",
+      "SLUDGE",
+      "BONE CLUB",
+      "FIRE BLAST",
+      "WATERFALL",
+      "CLAMP",
+      "SWIFT",
+      "SKULL BASH",
+      "SPIKE CANNON",
+      "CONSTRICT",
+      "AMNESIA",
+      "KINESIS",
+      "SOFTBOILED",
+      "HI JUMP KICK",
+      "GLARE",
+      "DREAM EATER",
+      "POISON GAS",
+      "BARRAGE",
+      "LEECH LIFE",
+      "LOVELY KISS",
+      "SKY ATTACK",
+      "TRANSFORM",
+      "BUBBLE",
+      "DIZZY PUNCH",
+      "SPORE",
+      "FLASH",
+      "PSYWAVE",
+      "SPLASH",
+      "ACID ARMOR",
+      "CRABHAMMER",
+      "EXPLOSION",
+      "FURY SWIPES",
+      "BONEMERANG",
+      "REST",
+      "ROCK SLIDE",
+      "HYPER FANG",
+      "SHARPEN",
+      "CONVERSION",
+      "TRI ATTACK",
+      "SUPER FANG",
+      "SLASH",
+      "SUBSTITUTE",
+      "STRUGGLE"
+    ],
+    "to": [
+      "הטבח",
+      "הטארק תכמ",
+      "תוריטס יתש",
+      "קזב ףורגא",
+      "לע ףורגא",
+      "ןובשח רוגסל",
+      "שא ףורגא",
+      "רופכ ףורגא",
+      "םער ףורגא",
+      "הטירש",
+      "התיבצ",
+      "הפירע",
+      "בהל חור",
+      "תוברחה דוקיר",
+      "ךותיח",
+      "חור ץרפ",
+      "ףנכ תכמ",
+      "תלוברעמ לועלע",
+      "הפועת",
+      "התיפל",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      "",
+      ""
+    ]
   }
 ]
